--- a/view/vendas.html
+++ b/view/vendas.html
@@ -15,15 +15,15 @@
 <body>
   <header>
     <nav class="container">
-      <a href="../index.html" class="logo">
-        <img src="../img/logoNewtonSuc.png" alt="Logo CEEP Newton Sucupira" />
+      <a href="/index.html" class="logo">
+        <img src="/img/logoNewtonSuc.png" alt="Logo CEEP Newton Sucupira" />
       </a>
       <ul class="nav-links">
-        <li><a href="index.html">Principal</a></li>
-        <li><a href="../atualizacoes.html">Atualizações</a></li>
-        <li><a href="../arrecadacoes.html">Ações</a></li>
-        <li><a href="../informacoes.html">Informações</a></li>
-        <li><a href="../vendas.html" class="butao active">Login do Terceirão</a></li>
+        <li><a href="/index.html">Principal</a></li>
+        <li><a href="/view/atualizacoes.html">Atualizações</a></li>
+        <li><a href="/view/arrecadacoes.html">Ações</a></li>
+        <li><a href="/view/informacoes.html">Informações</a></li>
+        <li><a href="/view/vendas.html" class="butao active">Login do Terceirão</a></li>
       </ul>
       <div class="dark-mode-toggle">
   <input type="checkbox" id="darkModeToggle" />
@@ -31,7 +31,6 @@
     <span class="slider round"></span>
   </label>
 </div>
-
     </nav>
   </header>
 
